@@ -8,6 +8,7 @@ import com.palmergames.bukkit.towny.TownyUniverse;
 import com.palmergames.bukkit.towny.event.NationPreTransactionEvent;
 import com.palmergames.bukkit.towny.event.TownPreTransactionEvent;
 import com.palmergames.bukkit.towny.event.nation.NationPreTownLeaveEvent;
+import com.palmergames.bukkit.towny.event.town.TownPreSetHomeBlockEvent;
 import com.palmergames.bukkit.towny.exceptions.EconomyException;
 import com.palmergames.bukkit.towny.exceptions.NotRegisteredException;
 import com.palmergames.bukkit.towny.exceptions.TownyException;
@@ -278,6 +279,24 @@ public class FlagWarCustomListener implements Listener {
 		if (FlagWarConfig.isAllowingAttacks() && System.currentTimeMillis() - FlagWar.lastFlagged(event.getTown()) < TownySettings.timeToWaitAfterFlag()) {
 			event.setCancelMessage(Translation.of("msg_war_flag_deny_recently_attacked"));
 			event.setCancelled(true);
+		}
+	}
+	
+	@EventHandler(priority = EventPriority.LOW, ignoreCancelled = true)
+	public void onTownSetHomeBlock(TownPreSetHomeBlockEvent event) {
+		if (FlagWarConfig.isAllowingAttacks()) {
+			if (FlagWar.isUnderAttack(event.getTown()) && TownySettings.isFlaggedInteractionTown()) {
+				event.setCancelMessage(Translation.of("msg_war_flag_deny_town_under_attack"));
+				event.setCancelled(true);
+				return;
+			}
+
+			if (System.currentTimeMillis()- FlagWar.lastFlagged(event.getTown()) < TownySettings.timeToWaitAfterFlag()) {
+				event.setCancelMessage(Translation.of("msg_war_flag_deny_recently_attacked"));
+				event.setCancelled(true);
+				return;
+			}
+
 		}
 	}
 }
